--- a/src/output.css
+++ b/src/output.css
@@ -7,6 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-400: oklch(82.8% 0.189 84.429);
     --color-white: #fff;
     --spacing: 0.25rem;
     --font-weight-medium: 500;
@@ -236,6 +237,27 @@
   .top-\[720px\] {
     top: 720px;
   }
+  .top-\[1000px\] {
+    top: 1000px;
+  }
+  .top-\[1250px\] {
+    top: 1250px;
+  }
+  .top-\[1255px\] {
+    top: 1255px;
+  }
+  .top-\[1260px\] {
+    top: 1260px;
+  }
+  .top-\[1300px\] {
+    top: 1300px;
+  }
+  .top-\[1400px\] {
+    top: 1400px;
+  }
+  .top-\[2000px\] {
+    top: 2000px;
+  }
   .left-\[1\] {
     left: 1;
   }
@@ -244,6 +266,15 @@
   }
   .left-\[86px\] {
     left: 86px;
+  }
+  .left-\[100px\] {
+    left: 100px;
+  }
+  .left-\[300px\] {
+    left: 300px;
+  }
+  .left-\[500px\] {
+    left: 500px;
   }
   .left-\[700\] {
     left: 700;
@@ -281,11 +312,35 @@
   .left-\[870px\] {
     left: 870px;
   }
+  .left-\[900px\] {
+    left: 900px;
+  }
+  .left-\[905px\] {
+    left: 905px;
+  }
+  .left-\[910px\] {
+    left: 910px;
+  }
+  .left-\[920px\] {
+    left: 920px;
+  }
   .left-\[1000px\] {
     left: 1000px;
   }
+  .left-\[1100px\] {
+    left: 1100px;
+  }
   .left-\[1200px\] {
     left: 1200px;
+  }
+  .left-\[1220px\] {
+    left: 1220px;
+  }
+  .left-\[1225gpx\] {
+    left: 1225gpx;
+  }
+  .left-\[1225px\] {
+    left: 1225px;
   }
   .left-\[1300px\] {
     left: 1300px;
@@ -338,11 +393,17 @@
   .mt-\[10px\] {
     margin-top: 10px;
   }
+  .mt-\[15px\] {
+    margin-top: 15px;
+  }
   .mt-\[20px\] {
     margin-top: 20px;
   }
   .mt-\[30px\] {
     margin-top: 30px;
+  }
+  .mt-\[40px\] {
+    margin-top: 40px;
   }
   .mt-\[50px\] {
     margin-top: 50px;
@@ -355,6 +416,30 @@
   }
   .ml-\[-100px\] {
     margin-left: -100px;
+  }
+  .ml-\[0\] {
+    margin-left: 0;
+  }
+  .ml-\[40px\] {
+    margin-left: 40px;
+  }
+  .ml-\[50px\] {
+    margin-left: 50px;
+  }
+  .ml-\[60px\] {
+    margin-left: 60px;
+  }
+  .ml-\[100px\] {
+    margin-left: 100px;
+  }
+  .ml-\[110px\] {
+    margin-left: 110px;
+  }
+  .ml-\[120px\] {
+    margin-left: 120px;
+  }
+  .ml-\[150px\] {
+    margin-left: 150px;
   }
   .ml-\[400px\] {
     margin-left: 400px;
@@ -376,6 +461,21 @@
   }
   .h-\[150px\] {
     height: 150px;
+  }
+  .h-\[200px\] {
+    height: 200px;
+  }
+  .h-\[300px\] {
+    height: 300px;
+  }
+  .h-\[500\] {
+    height: 500;
+  }
+  .h-\[500px\] {
+    height: 500px;
+  }
+  .h-\[600px\] {
+    height: 600px;
   }
   .h-\[700px\] {
     height: 700px;
@@ -400,6 +500,9 @@
   }
   .w-\[10\%\] {
     width: 10%;
+  }
+  .w-\[20\%\] {
+    width: 20%;
   }
   .w-\[40\%\] {
     width: 40%;
@@ -458,12 +561,25 @@
   .justify-around {
     justify-content: space-around;
   }
+  .justify-center {
+    justify-content: center;
+  }
+  .gap-\[20px\] {
+    gap: 20px;
+  }
   .rounded-\[5px\] {
     border-radius: 5px;
+  }
+  .rounded-\[15px\] {
+    border-radius: 15px;
   }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .border-\[2px\] {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
   }
   .border-b {
     border-bottom-style: var(--tw-border-style);
@@ -473,14 +589,23 @@
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 2px;
   }
+  .border-\[\#35AFBF\] {
+    border-color: #35AFBF;
+  }
   .border-b-\[\#35AFBF\] {
     border-bottom-color: #35AFBF;
   }
   .bg-\[\#35AFBF\] {
     background-color: #35AFBF;
   }
+  .bg-\[\#A3E0E8\] {
+    background-color: #A3E0E8;
+  }
   .bg-\[\#F3FEFF\] {
     background-color: #F3FEFF;
+  }
+  .bg-amber-400 {
+    background-color: var(--color-amber-400);
   }
   .pt-\[100px\] {
     padding-top: 100px;
@@ -496,6 +621,9 @@
   }
   .text-\[20px\] {
     font-size: 20px;
+  }
+  .text-\[22px\] {
+    font-size: 22px;
   }
   .text-\[24px\] {
     font-size: 24px;
