--- a/src/output.css
+++ b/src/output.css
@@ -376,6 +376,9 @@
   .z-1 {
     z-index: 1;
   }
+  .m-auto {
+    margin: auto;
+  }
   .mt-\[-50px\] {
     margin-top: -50px;
   }
@@ -426,6 +429,12 @@
   }
   .mt-\[150px\] {
     margin-top: 150px;
+  }
+  .mb-\[10\] {
+    margin-bottom: 10;
+  }
+  .mb-\[10px\] {
+    margin-bottom: 10px;
   }
   .ml-\[-50px\] {
     margin-left: -50px;
@@ -562,6 +571,9 @@
   .h-\[600px\] {
     height: 600px;
   }
+  .h-\[630px\] {
+    height: 630px;
+  }
   .h-\[700px\] {
     height: 700px;
   }
@@ -594,6 +606,9 @@
   }
   .w-\[10\] {
     width: 10;
+  }
+  .w-\[18px\] {
+    width: 18px;
   }
   .w-\[20\%\] {
     width: 20%;
@@ -652,6 +667,12 @@
   .w-\[105\%\] {
     width: 105%;
   }
+  .w-\[120px\] {
+    width: 120px;
+  }
+  .w-\[150px\] {
+    width: 150px;
+  }
   .w-\[160px\] {
     width: 160px;
   }
@@ -663,6 +684,9 @@
   }
   .w-\[950\%\] {
     width: 950%;
+  }
+  .w-\[1050\%\] {
+    width: 1050%;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -679,8 +703,14 @@
   .justify-around {
     justify-content: space-around;
   }
+  .justify-between {
+    justify-content: space-between;
+  }
   .justify-center {
     justify-content: center;
+  }
+  .gap-\[0px\] {
+    gap: 0px;
   }
   .gap-\[10px\] {
     gap: 10px;
@@ -688,14 +718,29 @@
   .gap-\[20px\] {
     gap: 20px;
   }
+  .gap-\[30px\] {
+    gap: 30px;
+  }
+  .gap-\[40px\] {
+    gap: 40px;
+  }
   .gap-\[50px\] {
     gap: 50px;
   }
   .gap-\[100px\] {
     gap: 100px;
   }
+  .rounded {
+    border-radius: 0.25rem;
+  }
   .rounded-\[5px\] {
     border-radius: 5px;
+  }
+  .rounded-\[10px\] {
+    border-radius: 10px;
+  }
+  .rounded-\[12px\] {
+    border-radius: 12px;
   }
   .rounded-\[15px\] {
     border-radius: 15px;
@@ -716,6 +761,10 @@
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
   }
+  .border-b-\[1px\] {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
   .border-b-\[2px\] {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 2px;
@@ -726,8 +775,35 @@
   .border-\[\#35AFBF\] {
     border-color: #35AFBF;
   }
+  .border-\[\#FFFFFF4D\] {
+    border-color: #FFFFFF4D;
+  }
+  .border-\[\#ffffff30\] {
+    border-color: #ffffff30;
+  }
+  .border-\[\#ffffff\] {
+    border-color: #ffffff;
+  }
+  .border-\[1pz\] {
+    border-color: 1pz;
+  }
+  .border-\[1x\] {
+    border-color: 1x;
+  }
+  .border-\[Subscribe\] {
+    border-color: Subscribe;
+  }
+  .border-b-\[\#4B4B4B\] {
+    border-bottom-color: #4B4B4B;
+  }
   .border-b-\[\#35AFBF\] {
     border-bottom-color: #35AFBF;
+  }
+  .border-b-\[\#FFFFFF4D\] {
+    border-bottom-color: #FFFFFF4D;
+  }
+  .bg-\[\#2C353E\] {
+    background-color: #2C353E;
   }
   .bg-\[\#4B4C4C\] {
     background-color: #4B4C4C;
@@ -774,6 +850,12 @@
   .bg-no-repeat {
     background-repeat: no-repeat;
   }
+  .pt-\[20px\] {
+    padding-top: 20px;
+  }
+  .pt-\[50px\] {
+    padding-top: 50px;
+  }
   .pt-\[80px\] {
     padding-top: 80px;
   }
@@ -783,17 +865,35 @@
   .pt-\[120px\] {
     padding-top: 120px;
   }
+  .pr-\[0px\] {
+    padding-right: 0px;
+  }
+  .pr-\[50px\] {
+    padding-right: 50px;
+  }
+  .pr-\[70px\] {
+    padding-right: 70px;
+  }
   .pb-\[10px\] {
     padding-bottom: 10px;
   }
   .pb-\[20px\] {
     padding-bottom: 20px;
   }
+  .pb-\[40px\] {
+    padding-bottom: 40px;
+  }
+  .pb-\[50px\] {
+    padding-bottom: 50px;
+  }
   .pb-\[200px\] {
     padding-bottom: 200px;
   }
   .text-center {
     text-align: center;
+  }
+  .text-\[16px\] {
+    font-size: 16px;
   }
   .text-\[18px\] {
     font-size: 18px;
@@ -813,6 +913,9 @@
   .text-\[35px\] {
     font-size: 35px;
   }
+  .text-\[38px\] {
+    font-size: 38px;
+  }
   .text-\[40px\] {
     font-size: 40px;
   }
@@ -830,6 +933,10 @@
   }
   .text-\[75px\] {
     font-size: 75px;
+  }
+  .leading-2 {
+    --tw-leading: calc(var(--spacing) * 2);
+    line-height: calc(var(--spacing) * 2);
   }
   .leading-10 {
     --tw-leading: calc(var(--spacing) * 10);
@@ -878,6 +985,33 @@
   .text-\[\#969999\] {
     color: #969999;
   }
+  .text-\[\#\] {
+    color: #;
+  }
+  .text-\[\#fff\] {
+    color: #fff;
+  }
+  .text-\[\#fffff\] {
+    color: #fffff;
+  }
+  .text-\[\#ffffff6\] {
+    color: #ffffff6;
+  }
+  .text-\[\#ffffff40\] {
+    color: #ffffff40;
+  }
+  .text-\[\#ffffff60\] {
+    color: #ffffff60;
+  }
+  .text-\[\#ffffff70\] {
+    color: #ffffff70;
+  }
+  .text-\[\#ffffff80\] {
+    color: #ffffff80;
+  }
+  .text-\[\#ffffff\] {
+    color: #ffffff;
+  }
   .text-\[18зч\] {
     color: 18зч;
   }
@@ -887,8 +1021,17 @@
   .text-\[center\] {
     color: center;
   }
+  .text-\[ffffff40\] {
+    color: ffffff40;
+  }
+  .text-\[ffffff\] {
+    color: ffffff;
+  }
   .text-\[px\] {
     color: px;
+  }
+  .text-\[white\] {
+    color: white;
   }
   .text-white {
     color: var(--color-white);
